MutationObserver element wait added, Driver refactored to smaller parts - underway, LazyElement factory now throws when appropriate. (#47)

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,84 @@ target/*
 target/**
 ./target
 ./target/*
+
+# Allures
+
+allure
+allure/
+allure/*
+allure/**
+allure/**/
+allure/**.*
+allure/**/**
+
+.allure
+.allure/
+.allure/*
+.allure/**
+.allure/**/
+.allure/**.*
+.allure/**/**
+
+.allure-results
+.allure-results/
+.allure-results/*
+.allure-results/**
+.allure-results/**/
+.allure-results/**.*
+.allure-results/**/**
+
+allure-results
+allure-results/
+allure-results/*
+allure-results/**
+allure-results/**/
+allure-results/**.*
+allure-results/**/**
+
+./allure
+./allure/
+./allure/*
+./allure/**
+./allure/**/
+./allure/**.*
+./allure/**/**
+
+./.allure
+./.allure/
+./.allure/*
+./.allure/**
+./.allure/**/
+./.allure/**.*
+./.allure/**/**
+
+./.allure-results
+./.allure-results/
+./.allure-results/*
+./.allure-results/**
+./.allure-results/**/
+./.allure-results/**.*
+./.allure-results/**/**
+
+./allure-results
+./allure-results/
+./allure-results/*
+./allure-results/**
+./allure-results/**/
+./allure-results/**.*
+./allure-results/**/**
+
+# Allures end
+
+# Driver
+
+./driver
+./driver/
+./driver/*
+
+
+driver/CEF
+driver/chrome
+driver/firefox
+
+# Driver end
